- Convert DataElement select to SingleSelectField - Add a z-index to SingleSelectField overlay to ensure select option are always on top of components below the select field

--- a/ImpactConnect/src/index.css
+++ b/ImpactConnect/src/index.css
@@ -1227,6 +1227,10 @@ video {
     color: red;
 }
 
+div.layer.fixed {
+  z-index: 50;
+}
+
 .odd\:bg-white:nth-child(odd) {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
