--- a/ImpactConnect/src/styles/index.css
+++ b/ImpactConnect/src/styles/index.css
@@ -52,3 +52,7 @@
 .required {
     color: red;
 }
+
+div.layer.fixed {
+    @apply z-50;
+}
